--- a/svelte/src/i18n/zh-CN.json
+++ b/svelte/src/i18n/zh-CN.json
@@ -1,8 +1,9 @@
 {
   "navbar": {
     "outputs": "输出",
-    "saves": "已保存",
-    "sources": "源"
+    "saves": "收藏",
+    "sources": "订阅",
+    "models": "模型"
   },
   "common": {
     "emptyList": "暂无数据",
@@ -15,16 +16,31 @@
       "add": "新增"
     }
   },
-  "collection": {
+  "collectionsTab": {
     "searchInput": {
-      "placeholder": "根据文件名过滤"
+      "placeholder": "根据文件名和备忘搜索"
     },
     "btn": {
       "save": "保存",
-      "sync": "同步"
+      "sync": "同步",
+      "syncing": "同步中"
     },
     "syncInput": {
-      "placeholder": "请输入 git 地址"
+      "placeholder": "Git 地址，比如 git@github.com:tzwm/comfyui-workflows.git"
+    },
+    "collection": {
+      "memoPlaceholder": "写个备忘，方便搜索"
+    },
+    "toast": {
+      "synced": "同步完成",
+      "syncFailed": "同步失败。请在控制台查看详情。",
+      "configUpdated": "保存成功",
+      "configUpdatedFailed": "保存失败。请在控制台查看详情。",
+      "deleteConfirm": "确认删除这个文件：",
+      "deleteSuccess": "删除成功：",
+      "deleteFailed": "删除失败。请在控制台查看详情。",
+      "updated": "更新成功",
+      "UpdatedFailed": "更新失败。请在控制台查看详情。"
     }
   },
   "filesList": {
