--- a/svelte/src/i18n/zh-CN.json
+++ b/svelte/src/i18n/zh-CN.json
@@ -61,6 +61,8 @@
     "You want to delete this source": "确认删除这个订阅吗？",
     "Deleted this source": "删除成功",
     "Failed to delete this source": "删除失败。请在控制台查看详情。",
-    "Add new source": "订阅新的源"
+    "Add new source": "订阅新的源",
+    "Subscribe": "订阅",
+    "Subscribing...": "订阅中"
   }
 }
